# kalman_study

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml  run.bash
DataLoader/: DataLoader.cpp  DataLoader.hpp
DataLoader/DataGenerator/: main.py  vis.py
Fliter/: FilterBase.hpp  Fliter.hpp  README.md
Fliter/BindMatrix/: BindMatrix.hpp
Fliter/EKF/include/: EKF.hpp
Fliter/EKF/src/: EKF.cpp
Fliter/FliterBase/: FilterBase.hpp
Fliter/KF/include/: KF.hpp
Fliter/KF/src/: KF.cpp
Fliter/UKF/include/: UKF.hpp
Fliter/UKF/src/: UKF.cpp
Fliter/Utils/: BindMatrix.hpp  README.md
Fliter/Utils/src/: BindMatrix.cpp
Fliter/utils/: BindMatrix.hpp
Fliter/utils/src/: BindMatrix.cpp
config/: config.yaml
include/KF/include/: KF.hpp
include/KF/src/: KF.cpp
launch/: data_loader.py  debug_launch.py  kf_launch.py  launch.py
msg/: Autoaim.msg
src/: kftest_node.cpp
